--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-builder --win"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^10.1.2"
+    "electron": "^15.1.2"
   },
   "dependencies": {
     "axios": "^0.20.0",
     "child_process": "^1.0.2",
     "dotenv": "^8.2.0",
+    "simple-node-logger": "^18.12.24",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "ws": "^7.3.1"
