--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "axios": "^0.20.0",
     "child_process": "^1.0.2",
     "dotenv": "^8.2.0",
+    "electron-builder": "^22.14.13",
     "simple-node-logger": "^18.12.24",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
+    "socket.io-client": "^4.3.2",
     "ws": "^7.3.1"
   }
 }
